[tool.poetry]
name = "bert-ner"
version = "0.1.0"
description = ""
authors = ["Patrick N <patricng>"]

[tool.poetry.dependencies]
python = "^3.6"
pytorch-transformers = "==1.2.0"
torch = "==1.2.0"
seqeval = "==0.0.5"
tqdm = "==4.31.1"
nltk = "==3.4.5"
Flask = "==1.1.1"
Flask-Cors = "==3.0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
